--- a/css/triostyle.css
+++ b/css/triostyle.css
@@ -1,25 +1,26 @@
 body {
     font-family: Roboto, Helvetica, sans-serif;
-     background: url(IMG_1336.JPG) no-repeat center center fixed; 
+     background: url(../images/IMG_1336.JPG) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
     height:100%;
     background-color: #5C7BBC;
-    width: 1175px;
 }
 
 
-
+.header, .header p {
+    text-align: center;
+    margin-bottom: 2em;
+    
+}
 .heading1 {
-	text-align: center;
-	font-size: 2.5em;
+    font-size: 2.5em;
     color: #f5f5f5;
 }
 
 .heading2 {
-	text-align: center;
 	font-size: 1.5em;
     color: #f5f5f5;
 }
@@ -46,11 +47,11 @@ body {
 
 
 
-#header { 
-	height: 150px;
-	width: 80%;
-}
 
+
+.col-xs-offset-1 {
+   margin-bottom: 2em;
+}
 
 
 .quote {
@@ -108,7 +109,7 @@ a:visited {
 
 iframe {
     border-radius: 10px;
-    display: auto;
+    display: inline-block;
 }
 
 img {
@@ -139,19 +140,14 @@ img {
     background-color: #f5f5f5;
     border-radius: 10px;
     opacity: 0.9;
-    margin-left: 0em;
-    margin-bottom: 1em;
-}
-
-@media (max-width: 768px) {
-    #pressQuotes {
-    }
+    
 }
 
 
 
-#iframes {
-    margin: auto 1em 1em auto;
+
+
+.iframes {
     padding: 1em;
     background-color: #f5f5f5;
     border-radius: 10px;
@@ -159,8 +155,7 @@ img {
 }
 
 #contact {
-    max-width: 55%;
-    margin-right: 1em;
+    
     padding: 1em;
     background-color: #f5f5f5;
     border-radius: 10px;
@@ -168,7 +163,7 @@ img {
 }
 
 #pressInfo {
-    max-width: 55%;
+    
     padding: 1em;
     background-color: #f5f5f5;
     border-radius: 10px;
@@ -176,8 +171,8 @@ img {
 }
 
 #bios {
-    margin: 1em 0 1em 0;
-    padding: 1em;
+    
+    padding: 2em;
     background-color: #f5f5f5;
     border-radius: 10px;
     opacity: 0.9;
