--- a/oldzieyblog.css
+++ b/oldzieyblog.css
@@ -9,7 +9,8 @@
  border: 1px solid #0E4FAE;
  border-radius: 4px;
  box-sizing: border-box;
- background-color:#4e82d0;
+ background-color: transparent;
+ width: 100%;
 }
 
 /* This is the styling for the header container*/
