--- a/oldzieyblog.css
+++ b/oldzieyblog.css
@@ -19,7 +19,6 @@
  color: #fff;
  font-size: 18px;
  background-color: #888;
- background-image: url("http://glassho.me/fwtest/bannertop.png");
  background-repeat: repeat-x;
 }
 
@@ -38,6 +37,7 @@ a.fw-feed-item-url {
  word-wrap: break-word;
  text-align: center;
  display:block;
+ color: #fff;
 }
 
 /* This is the styling for the Feed Title link in the header container*/
