--- a/css/triostyle.css
+++ b/css/triostyle.css
@@ -110,6 +110,9 @@ a:visited {
 iframe {
     border-radius: 10px;
     display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 1em;
 }
 
 img {
@@ -152,6 +155,7 @@ img {
     background-color: #f5f5f5;
     border-radius: 10px;
     opacity: 0.95; 
+    text-align: center;
 }
 
 #contact {
