--- a/css/triostyle.css
+++ b/css/triostyle.css
@@ -150,12 +150,19 @@ img {
 
 
 
-.iframes {
+.iframes, .iframes_YouTube {
     padding: 1em;
     background-color: #f5f5f5;
     border-radius: 10px;
     opacity: 0.95; 
     text-align: center;
+}
+
+.iframes_YouTube iframe {
+    
+    width: 100%;
+    height: 360px;
+    
 }
 
 #contact {
@@ -230,7 +237,18 @@ img {
 }
 
 
-
+@media (max-width: 420px) {
+    .iframes_YouTube iframe {
+        width: 360px;
+        max-width: 100%;
+        max-height: 202px;
+        height: 202px;
+    }
+    .iframes iframe {
+        width: 360px;
+        max-width: 100%;
+    }
+}
 
 
 
