--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -188,6 +188,12 @@ body {
     }
 
     /* background images while iframes load */
+
+    #refractions {
+        background: url('images/front.jpg') no-repeat;
+        background-size: 275px 275px;
+    }
+
     #migration {
         background: url('images/Migrationcover.jpg') no-repeat;
         background-size: 275px 275px;
@@ -197,6 +203,8 @@ body {
         background: url('images/FlightCover.jpg') no-repeat;
         background-size: 275px 275px;
     }
+
+    
 
 
     /* album titles */
