--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,5 +1,5 @@
 body {
-    background: url('/images/IMG_2769.jpg') no-repeat center center fixed;
+    /* background: url('/images/IMG_2769.jpg') no-repeat center center fixed; */
     background-size: cover;
     min-height: 600px;
     font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
