--- a/css/triostyle.css
+++ b/css/triostyle.css
@@ -1,6 +1,6 @@
 body {
     font-family: Roboto, Helvetica, sans-serif;
-     background: url(../images/IMG_2769.jpg) no-repeat center center fixed; 
+     /* background: url(../images/IMG_2769.jpg) no-repeat center center fixed; */
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
