--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -139,18 +139,33 @@ body {
         .bcp-promo-button, .bcp-promo-button a {
             background-color: #d56229;
             color: #F4EFEB;
-            border-radius: 10px;
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
         }    
+        .bcp-promo-quotes {
+            background-color: #d56229;
+            color: #F4EFEB;
+            border-bottom-left-radius: 10px;
+            border-bottom-right-radius: 10px;
+        }
+        .bcp-promo-quotes a {
+            color: #F4EFEB;
+        }
+       .bcp-promo-quotes a:hover {
+            background-color: #F4EFEB;
+            color: #3FADA4;
+            border-radius: 5px;
+        }
         .bcp-promo-button:hover {
             background-color: #3FADA4;
             color: #d56229;
-            border-radius: 10px;
         }
         .bcp-promo-button:hover p {
             background-color: #F4EFEB;
             color: #3FADA4;
             border-radius: 10px;
         }
+    
 
    
 
